Update EDS migration changes
Automated migration updates generated by Experience Catalyst.

Changed files (7):
- content/style/style-trend.md.tmp.5064.1762530330480
- content/style/style-trend.md
- content/style/style-trend.plain.html
- content/style/style-trend.html
- content/style/style-trend.md.tmp.5064.1762530601282
- blocks/columns/columns.css.tmp.5064.1762530620544
- blocks/columns/columns.css

--- a/content/style/style-trend.plain.html
+++ b/content/style/style-trend.plain.html
@@ -81,16 +81,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-<div class="cards"><div><div>Fresh drops for every mood—tennis whites, beach brights, party fits. Your next look starts here.</div></div><div><div>Game on! Sporty vibes meet street style. Sneakers, sets, and all the cool you need.</div></div><div><div>Chill never looked this good. Easy layers, bold extras—fun, effortless, always you.</div></div><div><div>Ready to shine? Statement looks and playful details for nights you'll never forget.</div></div><div><div>Remix your style. Layer, clash, repeat—make every outfit your own.</div></div><div><div>Hot new labels. Discover the brands everyone's buzzing about—before they go big.</div></div><div><div>Real people, real style. See how trendsetters own the scene, one outfit at a time.</div></div><div><div>Season's essentials. Stay ahead with our top picks—what's trending right now.</div></div></div><p><a href="https://www.wknd-trendsetters.site/fashion-insights">Browse</a></p><p><a href="https://www.wknd-trendsetters.site/fashion-trends-of-the-season">Join</a></p></div>
+<div class="columns 4-cols"><div><div>Fresh drops for every mood—tennis whites, beach brights, party fits. Your next look starts here.</div><div>Game on! Sporty vibes meet street style. Sneakers, sets, and all the cool you need.</div><div>Chill never looked this good. Easy layers, bold extras—fun, effortless, always you.</div><div>Ready to shine? Statement looks and playful details for nights you'll never forget.</div></div><div><div>Remix your style. Layer, clash, repeat—make every outfit your own.</div><div>Hot new labels. Discover the brands everyone's buzzing about—before they go big.</div><div>Real people, real style. See how trendsetters own the scene, one outfit at a time.</div><div>Season's essentials. Stay ahead with our top picks—what's trending right now.</div></div></div><p><a href="https://www.wknd-trendsetters.site/fashion-insights">Browse</a></p><p><a href="https://www.wknd-trendsetters.site/fashion-trends-of-the-season">Join</a></p></div>
 <div>
 
 
